tests/snapshots/cli__snapshot_custom_server_no_upload.snap
---
source: tests/cli.rs
expression: stdout
---
Config {
    duration_secs: 10,
    connections: 4,
    server: Some(
        Url {
            scheme: "https",
            cannot_be_a_base: false,
            username: "",
            password: None,
            host: Some(
                Domain(
                    "example.com",
                ),
            ),
            port: None,
            path: "/",
            query: None,
            fragment: None,
        },
    ),
    do_upload: false,
    do_download: true,
    format: Human,
    color: Auto,
    ip_version: Auto,
    verbose: 0,
}
