tests/snapshots/cli__snapshot_default_config.snap
---
source: tests/cli.rs
expression: stdout
---
Config {
    duration_secs: 10,
    connections: 4,
    server: None,
    do_upload: true,
    do_download: true,
    format: Human,
    color: Auto,
    ip_version: Auto,
    verbose: 0,
}
Backend: cloudflare
