tests/snapshots/cli__snapshot_json_format_with_duration.snap
---
source: tests/cli.rs
expression: stdout
---
Config {
    duration_secs: 30,
    connections: 4,
    server: None,
    do_upload: true,
    do_download: true,
    format: Json,
    color: Auto,
    ip_version: Auto,
    verbose: 0,
}
